# siginit-sentinels

./: .gitignore  .replit  Pasted-Here-s-a-design-for-a-two-tier-filter-system-for-a-dashboard-combining-intelligence-types-with-thei-1732424894822.txt  README.md  app.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  replit.nix
migrations/versions/: add_bulk_intel_data.py  add_comprehensive_intel_data.py  add_conversation_analysis.py  add_distributed_intel_data.py  add_extensive_intel_data.py  add_extensive_military_data.py  add_final_intel_clusters.py  add_geographic_clusters.py  add_heatmap_data.py  add_historical_data.py  add_more_historical_data.py  add_sample_data.py  fix_enum_defaults.py  fix_sigint_data.py  initial_migration.py  reset_and_repopulate_data.py  update_intel_categorization.py  update_intel_subtype_values.py  update_intel_subtypes.py  update_intel_types.py
mobile/: App.js
mobile/screens/auth/: LoginScreen.js
mobile/services/: auth.js
routes/: api.py  auth.py  main.py
services/: alert_manager.py  nlp_processor.py  telegram_collector.py
static/css/: custom.css
static/js/: dashboard.js  map.js  websocket.js
templates/: alerts.html  audio.html  base.html  dashboard.html  reports.html  telegram.html
templates/auth/: login.html
templates/errors/: 404.html  500.html
