[project]
name = "repl-nix-geoalertanalyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "geopy>=2.4.1",
    "telethon>=1.38.1",
    "flask-socketio>=5.4.1",
    "flask-login>=0.6.3",
    "transformers>=4.46.3",
    "spacy>=3.8.2",
    "langdetect>=1.0.9",
]
