[project]
name = "repl-nix-geoalertanalyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "geopy>=2.4.1",
    "telethon>=1.38.1",
    "flask-socketio>=5.4.1",
    "flask-login>=0.6.3",
    "transformers>=4.46.3",
    "spacy>=3.7.1,<3.8.0",
    "langdetect>=1.0.9",
    "flask-cors>=5.0.0",
    "gevent>=24.11.1",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.0.1",
    "sqlalchemy>=2.0.23",
    "python-socketio>=5.10.0",
    "en-core-web-sm",
    "python-dotenv>=1.0.0",
    "gevent-websocket>=0.10.1",
    "eventlet>=0.33.3",
    "flask-migrate>=4.0.7",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz" }
ru-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.7.1/ru_core_news_sm-3.7.1.tar.gz" }
